--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1129,7 +1129,7 @@ body, html {
   background-size: cover; }
 
 #a-slide-1 {
-  background-image: url("../../img/a_004.jpg");
+  background-image: url("../img/a_004.jpg");
   transform: translate(0, 0); }
   #a-slide-1 .a-r-star {
     stroke-dashoffset: 3000;
@@ -1142,7 +1142,7 @@ body, html {
     display: inline-block; }
 
 #a-slide-2 {
-  background-image: url("../../img/a_004.jpg");
+  background-image: url("../img/a_004.jpg");
   transform: translate(0, 100%); }
   #a-slide-2 .a-r-star {
     stroke-dashoffset: 5000;
@@ -1154,11 +1154,11 @@ body, html {
     animation: circle 5s linear both; }
 
 #a-slide-3 {
-  background-image: url("../../img/a_004.jpg");
+  background-image: url("../img/a_004.jpg");
   transform: translate(100%, 100%) rotate(180deg); }
 
 #a-slide-4 {
-  background-image: url("../../img/a_004.jpg");
+  background-image: url("../img/a_004.jpg");
   transform: translate(100%, 200%); }
 
 html, body {
