--- a/src/scss/pageActivity/pageBranch/_pageRecommend.scss
+++ b/src/scss/pageActivity/pageBranch/_pageRecommend.scss
@@ -77,7 +77,7 @@
   background-size: cover; }
 #a-slide-1 {
 
-  background-image: url("../../img/a_004.jpg");
+  background-image: url("../img/a_004.jpg");
   transform: translate(0, 0); 
   .a-r-star{
     stroke-dashoffset: 3000;
@@ -96,7 +96,7 @@
 }
 
 #a-slide-2 {
-  background-image: url("../../img/a_004.jpg");
+  background-image: url("../img/a_004.jpg");
   transform: translate(0, 100%); 
   .a-r-star{
     stroke-dashoffset:5000;
@@ -114,13 +114,12 @@
 }
 
 #a-slide-3 {
-  background-image: url("../../img/a_004.jpg");
+  background-image: url("../img/a_004.jpg");
   transform: translate(100%, 100%) rotate(180deg); 
-
 
 }
 
 #a-slide-4 {
-  background-image: url("../../img/a_004.jpg");
+  background-image: url("../img/a_004.jpg");
   transform: translate(100%, 200%) ;
 }
